--- a/app/src/main/res/layout/line_note.xml
+++ b/app/src/main/res/layout/line_note.xml
@@ -5,27 +5,28 @@
     android:layout_height="wrap_content"
     android:weightSum="10"
     android:background="@color/white"
-    android:padding="10dp"
-    android:layout_marginTop="5dp"
+    android:padding="8dp"
     >
 
     <TextView
         android:id="@+id/txtTextView"
         android:layout_weight="8"
-        android:padding="8dp"
+        android:paddingVertical="8dp"
         android:text="Ten cong viec"
         android:textColor="#222220"
         android:textSize="18sp"
         android:layout_width="0dp"
-        android:layout_height="50dp">
+        android:gravity=""
+        android:layout_height="match_parent"
+        >
     </TextView>
     <ImageButton
                 android:id="@+id/btnDeleteButton"
                 android:layout_weight="2"
                 android:background="@color/white"
-                android:src="@drawable/deleteicon"
+                android:src="@drawable/icons8_close_48"
                 android:layout_width="0dp"
-                android:layout_height="50dp">
+                android:layout_height="match_parent">
     </ImageButton>
 
 <!--    <ImageButton-->
