--- a/app/src/main/res/layout/update_note.xml
+++ b/app/src/main/res/layout/update_note.xml
@@ -3,7 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/background">
+    android:background="@color/background"
+    android:paddingHorizontal="20dp"
+    android:paddingVertical="10dp"
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,46 +18,52 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_weight="0.5"
-            android:background="@color/background"
-            android:src="@drawable/icons8_undo_40px"
             android:layout_marginLeft="5dp"
-            android:paddingTop="5dp"
-            />
+            android:layout_weight="0.75"
+            android:background="@color/background"
+            android:src="@drawable/icons8_go_back_48" />
         <TextView
             android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="4"
-            android:layout_height="match_parent">
-
-        </TextView>
-        <ImageButton
-            android:id="@+id/editConfirmButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/save"
-            android:layout_weight="0.5"
-            android:layout_gravity="end"
-            android:background="@color/background"
-            android:layout_marginRight="5dp"
-            android:paddingTop="5dp"
-            />
+            android:fontFamily="serif"
+            android:gravity="center"
+            android:text="Chỉnh sửa task"
+            android:textColor="@color/black"
+            android:textSize="24dp" />
     </LinearLayout>
-    <EditText
-        android:textSize="20sp"
-        android:id="@+id/editNoteTitle"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:textColor="@color/black"
         android:layout_height="wrap_content"
-        >
+        android:layout_marginTop="20dp"
+        android:orientation="vertical">
 
-    </EditText>
-    <EditText
-        android:textSize="16sp"
-        android:id="@+id/editNoteContent"
-        android:layout_width="match_parent"
-        android:textColor="@color/black"
-        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/editNoteTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="14dp"
+            android:hint="Nhập tiêu đề"
+            android:textColor="@color/black"
+            android:textColorHint="#838383"
+            android:textSize="16sp"></EditText>
 
-    </EditText>
+        <EditText
+            android:id="@+id/editNoteContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Nhập nội dung"
+            android:textColor="@color/black"
+            android:textColorHint="#838383"
+            android:textSize="16sp"></EditText>
 
+        <Button
+            android:id="@+id/editConfirmButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#427D9D"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/white"
+            android:text="Sửa"></Button>
+    </LinearLayout>
 </LinearLayout>
