--- a/app/src/main/res/layout/create_note.xml
+++ b/app/src/main/res/layout/create_note.xml
@@ -19,18 +19,18 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:layout_marginLeft="5dp"
-            android:layout_weight="0.75"
+            android:layout_weight="0.5"
             android:background="@color/background"
-            android:src="@drawable/icons8_go_back_48" />
+            android:src="@drawable/goback" />
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="4"
             android:fontFamily="serif"
             android:gravity="center"
-            android:text="Thêm mới task"
+            android:text="Thêm mới ghi chú"
             android:textColor="@color/black"
-            android:textSize="24dp" />
+            android:textSize="20dp" />
     </LinearLayout>
 
     <LinearLayout
