--- a/app/src/main/res/layout/line_note.xml
+++ b/app/src/main/res/layout/line_note.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/btnDeleteButton"
                 android:layout_weight="2"
                 android:background="@color/white"
-                android:src="@drawable/icons8_close_48"
+                android:src="@drawable/close"
                 android:layout_width="0dp"
                 android:layout_height="match_parent">
     </ImageButton>
